Updated Model Files

--- a/ResEmoteNet/PreparingFer2013.ipynb
+++ b/ResEmoteNet/PreparingFer2013.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the FER2013 dataset\n",
+    "\n",
+    "Note: Mappings are converting to be common with all other datasets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -46,30 +55,51 @@
     "testing_set = df[df['Usage'] == 'PublicTest']\n",
     "validation_set = df[df['Usage'] == 'PrivateTest']\n",
     "\n",
+    "# This will be the emotion mapping used throughout the project (for all datasets)\n",
+    "universal_emotion_mapping = {'Angry': 0, 'Disgust': 1, 'Fear': 2, 'Happy': 3, 'Sad': 4, 'Surprise': 5, 'Neutral': 6}\n",
+    "\n",
+    "# Dataset specific emotion mapping (The mappings will be converted to the universal mapping for consistency)\n",
     "emotion_mapping = {0: 'Angry', 1: 'Disgust', 2: 'Fear', 3: 'Happy', 4: 'Sad', 5: 'Surprise', 6: 'Neutral'}\n",
     "\n",
     "# Display the first few rows of each set\n",
     "print(\"Training Set:\")\n",
+    "# Correctly mapping the labels to the universal emotion mapping\n",
+    "training_set.loc[:, 'emotion'] = training_set['emotion'].map(emotion_mapping).map(universal_emotion_mapping)\n",
     "print(training_set.head())\n",
     "\n",
     "print(\"\\nTesting Set:\")\n",
+    "# Correctly mapping the labels to the universal emotion mapping\n",
+    "testing_set.loc[:, 'emotion'] = testing_set['emotion'].map(emotion_mapping).map(universal_emotion_mapping)\n",
     "print(testing_set.head())\n",
     "\n",
     "print(\"\\nValidation Set:\")\n",
+    "# Correctly mapping the labels to the universal emotion mapping\n",
+    "validation_set.loc[:, 'emotion'] = validation_set['emotion'].map(emotion_mapping).map(universal_emotion_mapping)\n",
     "print(validation_set.head())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Storing the images according to their use case \n",
+    "\n",
+    "Note: Images are named as follows {test/train/validation}\\_{index}\\_{emotion_label}"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
-    "destination_directory = 'Fer_ResEmoteNet'\n",
+    "destination_directory = 'FER_ResEmoteNet'\n",
+    "universal_emotion_mapping = {0: 'Angry', 1: 'Disgust', 2: 'Fear', 3: 'Happy', 4: 'Sad', 5: 'Surprise', 6: 'Neutral'}\n",
     "\n",
     "# Create directories if they don't exist\n",
     "os.makedirs(destination_directory+'/train', exist_ok=True)\n",
@@ -78,15 +108,13 @@
     "\n",
     "def save_images(dataset, set_name):\n",
     "    for index, row in dataset.iterrows():\n",
-    "        emotion_label = emotion_mapping[row['emotion']]\n",
+    "        emotion_label = universal_emotion_mapping[row['emotion']]\n",
     "        image_data = row['pixels']\n",
     "        image_pixels = np.fromstring(image_data, sep=' ').astype(int)\n",
     "        image_pixels = image_pixels.reshape(48, 48)\n",
     "        \n",
     "        # Create an image from the pixel data\n",
     "        image = Image.fromarray(image_pixels.astype('uint8'), 'L')\n",
-    "        # plt.imshow(image, cmap='gray')\n",
-    "        # plt.show()\n",
     "        \n",
     "        # Save the image to the appropriate directory\n",
     "        image.save(f'{destination_directory}/{set_name}/{set_name}_{index}_{emotion_label.lower()}.jpg')\n",
@@ -98,15 +126,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Augmenting the data in the Training set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image augmentation completed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from PIL import Image, ImageOps\n",
+    "import random\n",
+    "\n",
+    "dataset_path = os.path.join(destination_directory, 'train')\n",
+    "target_num_images = 1000\n",
+    "\n",
+    "def augment_image(image):\n",
+    "    \"\"\"Apply random augmentations to an image.\"\"\"\n",
+    "    augmentations = [\n",
+    "        lambda x: x.rotate(random.randint(-30, 30)),\n",
+    "        lambda x: ImageOps.mirror(x),\n",
+    "        lambda x: ImageOps.crop(x, border=random.randint(0, 10)),\n",
+    "    ]\n",
+    "    augmentation = random.choice(augmentations)\n",
+    "    return augmentation(image)\n",
+    "\n",
+    "# Group images by emotion\n",
+    "images_by_emotion = {}\n",
+    "for filename in os.listdir(dataset_path):\n",
+    "    if filename.endswith(('.jpg', '.png')):\n",
+    "        emotion = filename.split('_')[-1].split('.')[0]\n",
+    "        # print(emotion)\n",
+    "        if emotion not in images_by_emotion:\n",
+    "            images_by_emotion[emotion] = []\n",
+    "        images_by_emotion[emotion].append(filename)\n",
+    "\n",
+    "# Augment images for each emotion\n",
+    "for emotion, images in images_by_emotion.items():\n",
+    "    num_images = len(images)\n",
+    "    \n",
+    "    if num_images < target_num_images:\n",
+    "        for i in range(target_num_images - num_images):\n",
+    "            original_image_path = os.path.join(dataset_path, images[i % num_images])\n",
+    "            with Image.open(original_image_path) as img:\n",
+    "                augmented_image = augment_image(img)\n",
+    "                new_image_name = f'train_augmented_{num_images + i + 1}_{emotion}.jpg'\n",
+    "                augmented_image.save(os.path.join(dataset_path, new_image_name))\n",
+    "\n",
+    "print(\"Image augmentation completed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
     "file_extension = 'jpg'\n",
     "\n",
-    "label_mapping = {'angry':0, 'disgust':1, 'fear':2, 'happy':3, 'sad':4, 'surprise':5, 'neutral':6}\n",
+    "universal_emotion_mapping = {'Angry': 0, 'Disgust': 1, 'Fear': 2, 'Happy': 3, 'Sad': 4, 'Surprise': 5, 'Neutral': 6}\n",
     "\n",
     "folder_mapping = {'test': 'test', 'train': 'train', 'validation': 'val'}\n",
     "\n",
@@ -120,15 +210,15 @@
     "    for filename in os.listdir(folder_path):\n",
     "        if filename.endswith(file_extension):  \n",
     "            label_name = filename.split('_')[-1].split('.')[0]\n",
-    "            label_value = label_mapping.get(label_name)\n",
+    "            label_value = universal_emotion_mapping.get(label_name.capitalize())\n",
     "            if label_value is not None:  \n",
     "                image_data.append([filename, label_value])\n",
     "\n",
     "    df = pd.DataFrame(image_data, columns=[\"ImageName\", \"Label\"])\n",
     "\n",
-    "    csv_file_path = os.path.join(folder_path, f'{folder}_labels.csv')\n",
+    "    csv_file_path = os.path.join(folder_path, 'labels.csv')\n",
     "\n",
-    "    df.to_csv(csv_file_path, index=False, header=False)"
+    "    df.to_csv(csv_file_path, index=False, header=['filename', 'label'])"
    ]
   }
  ],
