--- a/Models/PAtt-Lite/PAtt-Lite.ipynb
+++ b/Models/PAtt-Lite/PAtt-Lite.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,9 @@
     "\n",
     "    IMG_SIZE = 224\n",
     "\n",
-    "    Label_Mapping = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral', 7:'Contempt'}\n",
+    "    # Label_Mapping = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral', 7:'Contempt'}\n",
+    "    Label_Mapping = {0:'0', 1:'1', 2:'2', 3:'3', 4:'4', 5:'5', 6:'6', 7:'7'}\n",
+    "\n",
     "    \n",
     "    for split in splits:\n",
     "        # PATH = os.path.join(path_prefix, dataset_name, split)\n",
@@ -55,8 +57,6 @@
     "        for classes in Label_Mapping.values():\n",
     "            class_path = os.path.join(PATH, classes)\n",
     "            class_numeric = next((k for k, v in Label_Mapping.items() if v == classes), None)\n",
-    "            # print(f\"{classes}_{class_numeric}_{class_path}\")\n",
-    "            # print('---------------')\n",
     "\n",
     "            try:\n",
     "                for sample in os.listdir(class_path):\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,16 +87,16 @@
     "IMG_SHAPE = (120, 120, 3) # (224, 224, 3)\n",
     "BATCH_SIZE = 8\n",
     "\n",
-    "TRAIN_EPOCH = 1 #100\n",
+    "TRAIN_EPOCH = 300\n",
     "TRAIN_LR = 1e-3\n",
-    "TRAIN_ES_PATIENCE = 0 #15\n",
+    "TRAIN_ES_PATIENCE = 15\n",
     "TRAIN_LR_PATIENCE = 9\n",
     "TRAIN_MIN_LR = 1e-6\n",
     "TRAIN_DROPOUT = 0.1\n",
     "\n",
     "FT_EPOCH = 500\n",
     "FT_LR = 1e-5\n",
-    "FT_LR_DECAY_STEP = 40.0#80.0\n",
+    "FT_LR_DECAY_STEP = 80.0\n",
     "FT_LR_DECAY_RATE = 1\n",
     "FT_ES_PATIENCE = 20\n",
     "FT_DROPOUT = 0.2\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,19 +197,19 @@
     "    X_valid, y_valid = X['validation'], y['validation']\n",
     "    X_test, y_test = X['test'], y['test']\n",
     "\n",
-    "    X_train = np.array([cv2.resize(img, (120, 120)) for img in X_train])\n",
-    "    X_valid = np.array([cv2.resize(img, (120, 120)) for img in X_valid])\n",
-    "    X_test = np.array([cv2.resize(img, (120, 120)) for img in X_test])\n",
+    "    # X_train = np.array([cv2.resize(img, (120, 120)) for img in X_train])\n",
+    "    # X_valid = np.array([cv2.resize(img, (120, 120)) for img in X_valid])\n",
+    "    # X_test = np.array([cv2.resize(img, (120, 120)) for img in X_test])\n",
     "\n",
     "    # Convert images to grayscale and resize them\n",
-    "    # X_train = np.array([cv2.cvtColor(cv2.resize(img, (120, 120)), cv2.COLOR_RGB2GRAY) for img in X_train])\n",
-    "    # X_valid = np.array([cv2.cvtColor(cv2.resize(img, (120, 120)), cv2.COLOR_RGB2GRAY) for img in X_valid])\n",
-    "    # X_test = np.array([cv2.cvtColor(cv2.resize(img, (120, 120)), cv2.COLOR_RGB2GRAY) for img in X_test])\n",
+    "    X_train = np.array([cv2.cvtColor(cv2.resize(img, (120, 120)), cv2.COLOR_RGB2GRAY) for img in X_train])\n",
+    "    X_valid = np.array([cv2.cvtColor(cv2.resize(img, (120, 120)), cv2.COLOR_RGB2GRAY) for img in X_valid])\n",
+    "    X_test = np.array([cv2.cvtColor(cv2.resize(img, (120, 120)), cv2.COLOR_RGB2GRAY) for img in X_test])\n",
     "    \n",
     "    # Convert grayscale to pseudo-RGB by repeating the grayscale values across 3 channels\n",
-    "    # X_train = np.repeat(np.expand_dims(X_train, axis=-1), 3, axis=-1)\n",
-    "    # X_valid = np.repeat(np.expand_dims(X_valid, axis=-1), 3, axis=-1)\n",
-    "    # X_test = np.repeat(np.expand_dims(X_test, axis=-1), 3, axis=-1)\n",
+    "    X_train = np.repeat(np.expand_dims(X_train, axis=-1), 3, axis=-1)\n",
+    "    X_valid = np.repeat(np.expand_dims(X_valid, axis=-1), 3, axis=-1)\n",
+    "    X_test = np.repeat(np.expand_dims(X_test, axis=-1), 3, axis=-1)\n",
     "\n",
     "    print(\"Shape of train_sample: {}\".format(X_train.shape))\n",
     "    print(\"Shape of train_label: {}\".format(y_train.shape))\n",
@@ -341,11 +341,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset doesn't have class Angry, therefore skipping.\n",
+      "Dataset doesn't have class Disgust, therefore skipping.\n",
+      "Dataset doesn't have class Fear, therefore skipping.\n",
+      "Dataset doesn't have class Happy, therefore skipping.\n",
+      "Dataset doesn't have class Sad, therefore skipping.\n",
+      "Dataset doesn't have class Surprise, therefore skipping.\n",
+      "Dataset doesn't have class Neutral, therefore skipping.\n",
+      "Dataset doesn't have class Contempt, therefore skipping.\n",
+      "Dataset doesn't have class Angry, therefore skipping.\n",
+      "Dataset doesn't have class Disgust, therefore skipping.\n",
+      "Dataset doesn't have class Fear, therefore skipping.\n",
+      "Dataset doesn't have class Happy, therefore skipping.\n",
+      "Dataset doesn't have class Sad, therefore skipping.\n",
+      "Dataset doesn't have class Surprise, therefore skipping.\n",
+      "Dataset doesn't have class Neutral, therefore skipping.\n",
+      "Dataset doesn't have class Contempt, therefore skipping.\n",
+      "Dataset doesn't have class Angry, therefore skipping.\n",
+      "Dataset doesn't have class Disgust, therefore skipping.\n",
+      "Dataset doesn't have class Fear, therefore skipping.\n",
+      "Dataset doesn't have class Happy, therefore skipping.\n",
+      "Dataset doesn't have class Sad, therefore skipping.\n",
+      "Dataset doesn't have class Surprise, therefore skipping.\n",
+      "Dataset doesn't have class Neutral, therefore skipping.\n",
+      "Dataset doesn't have class Contempt, therefore skipping.\n",
+      "Shape of train_sample: (0, 3)\n",
+      "Shape of train_label: (0,)\n",
+      "Shape of valid_sample: (0, 3)\n",
+      "Shape of valid_label: (0,)\n",
+      "Shape of test_sample: (0, 3)\n",
+      "Shape of test_label: (0,)\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "arrays used as indices must be of integer (or boolean) type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mTrainPAttLite\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../../Datasets/FER_Structured_Aligned\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFER_Structured_Aligned\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_cp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#'FER_Structured_model_finetune_checkpoint.keras')\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[5], line 31\u001b[0m, in \u001b[0;36mTrainPAttLite\u001b[1;34m(data_directory, dataset_name, model_cp)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShape of test_sample: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(X_test\u001b[38;5;241m.\u001b[39mshape))\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShape of test_label: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(y_test\u001b[38;5;241m.\u001b[39mshape))\n\u001b[1;32m---> 31\u001b[0m class_weights \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_class_weight\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbalanced\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclasses\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munique\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     32\u001b[0m class_weights \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28menumerate\u001b[39m(class_weights))\n\u001b[0;32m     34\u001b[0m model, input_layer, sample_resizing, data_augmentation, preprocess_input, base_model, self_attention, patch_extraction, global_average_layer, pre_classification, prediction_layer \u001b[38;5;241m=\u001b[39m Model(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\MastersRepos\\Deep-Learning-For-Computer-Vision\\Models\\PAtt-Lite\\.venv\\lib\\site-packages\\sklearn\\utils\\_param_validation.py:216\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    210\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    211\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m    212\u001b[0m         skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m    213\u001b[0m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m    214\u001b[0m         )\n\u001b[0;32m    215\u001b[0m     ):\n\u001b[1;32m--> 216\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    217\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    218\u001b[0m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[0;32m    219\u001b[0m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[0;32m    220\u001b[0m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[0;32m    221\u001b[0m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[0;32m    222\u001b[0m     msg \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\n\u001b[0;32m    223\u001b[0m         \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+ must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    224\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    225\u001b[0m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[0;32m    226\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\MastersRepos\\Deep-Learning-For-Computer-Vision\\Models\\PAtt-Lite\\.venv\\lib\\site-packages\\sklearn\\utils\\class_weight.py:73\u001b[0m, in \u001b[0;36mcompute_class_weight\u001b[1;34m(class_weight, classes, y)\u001b[0m\n\u001b[0;32m     70\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclasses should have valid labels that are in y\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     72\u001b[0m     recip_freq \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(y) \u001b[38;5;241m/\u001b[39m (\u001b[38;5;28mlen\u001b[39m(le\u001b[38;5;241m.\u001b[39mclasses_) \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mbincount(y_ind)\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat64))\n\u001b[1;32m---> 73\u001b[0m     weight \u001b[38;5;241m=\u001b[39m \u001b[43mrecip_freq\u001b[49m\u001b[43m[\u001b[49m\u001b[43mle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclasses\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     75\u001b[0m     \u001b[38;5;66;03m# user-defined dictionary\u001b[39;00m\n\u001b[0;32m     76\u001b[0m     weight \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones(classes\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat64, order\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: arrays used as indices must be of integer (or boolean) type"
+     ]
+    }
+   ],
    "source": [
-    "TrainPAttLite('../../Datasets/FER_Structured', \"FER_Structured\", model_cp = None) #'FER_Structured_model_finetune_checkpoint.keras')"
+    "TrainPAttLite('../../Datasets/FER_Structured_Aligned', \"FER_Structured_Aligned\", model_cp = None) #'FER_Structured_model_finetune_checkpoint.keras')"
    ]
   },
   {
