Cleaned up dataset curation code

--- a/Datasets/AffectNet.ipynb
+++ b/Datasets/AffectNet.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dataset Link:** https://www.kaggle.com/datasets/thienkhonghoc/affectnet / https://www.kaggle.com/datasets/yakhyokhuja/affectnetaligned"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The affect net labels already align with the universal emotion labels\n",
-    "# universal_emotion_mapping = {0: 'Angry', 1: 'Disgust', 2: 'Fear', 3: 'Happy', 4: 'Sad', 5: 'Surprise', 6: 'Neutral'}\n",
-    "AffectNet_Label_Mapping = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral', 7:'Contempt'}"
+    "AffectNet_Label_Mapping = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral', 7:'Contempt'}\n",
+    "AffectNet_Label_Mapping_Inverse = {v: k for k, v in AffectNet_Label_Mapping.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +130,7 @@
     "                # The label is assumed to be the last part, with the file extension removed.\n",
     "                label_with_ext = parts[-1]\n",
     "                label, _ = os.path.splitext(label_with_ext)\n",
+    "                label = str(AffectNet_Label_Mapping_Inverse.get(label, None))\n",
     "                \n",
     "                # Create the label subdirectory if it doesn't exist.\n",
     "                label_dir = os.path.join(usage_path, label)\n",
@@ -142,6 +150,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processed train: 37553 images. CSV saved to AffectNet_testing\\train\\labels.csv\n",
+      "Processed test: 3200 images. CSV saved to AffectNet_testing\\test\\labels.csv\n",
+      "Processed validation: 800 images. CSV saved to AffectNet_testing\\validation\\labels.csv\n",
       "Filename labels.csv does not match expected format. Skipping.\n",
       "Filename labels.csv does not match expected format. Skipping.\n",
       "Filename labels.csv does not match expected format. Skipping.\n"
@@ -151,11 +162,11 @@
    "source": [
     "# Set the source (AffectNet dataset) and destination directories.\n",
     "source_base = 'AffectNet'        \n",
-    "destination_base = 'AffectNet_Structured_Mapping'  \n",
+    "destination_base = 'AffectNet_Structured_Aligned'  \n",
     "flatten_affectnet(source_base, destination_base)\n",
     "\n",
     "# Set the base directory containing the train, test, and validation subdirectories.\n",
-    "base_directory = 'AffectNet_Structured_Mapping'\n",
+    "base_directory = destination_base\n",
     "copy_images_to_label_subdirectories(base_directory)"
    ]
   }
