--- a/Datasets/CK+.ipynb
+++ b/Datasets/CK+.ipynb
@@ -1,14 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dataset Link:** https://www.kaggle.com/datasets/davilsena/ckdataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
-    "import csv\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from PIL import Image"
@@ -16,18 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The CK+ labels already align with the universal emotion labels\n",
-    "# universal_emotion_mapping = {0: 'Angry', 1: 'Disgust', 2: 'Fear', 3: 'Happy', 4: 'Sad', 5: 'Surprise', 6: 'Neutral'}\n",
-    "CK_Label_Mapping = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral', 7:'Contempt'}"
+    "CK_Label_Mapping = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral', 7:'Contempt'}\n",
+    "CK_Label_Mapping_Inverse = {v: k for k, v in CK_Label_Mapping.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +90,7 @@
     "        if not os.path.isdir(usage_path):\n",
     "            print(f\"Directory {usage_path} does not exist. Skipping.\")\n",
     "            continue\n",
-    "        \n",
+    "\n",
     "        # Process each file in the usage folder.\n",
     "        for filename in os.listdir(usage_path):\n",
     "            file_path = os.path.join(usage_path, filename)\n",
@@ -98,6 +104,7 @@
     "                # The label is assumed to be the last part, with the file extension removed.\n",
     "                label_with_ext = parts[-1]\n",
     "                label, _ = os.path.splitext(label_with_ext)\n",
+    "                label = str(CK_Label_Mapping_Inverse.get(label, None))\n",
     "                \n",
     "                # Create the label subdirectory if it doesn't exist.\n",
     "                label_dir = os.path.join(usage_path, label)\n",
@@ -128,7 +135,7 @@
     "df = pd.read_csv('CK+/ckextended.csv')\n",
     "\n",
     "# Define base directory structure\n",
-    "base_directory = 'CK+_Structured'\n",
+    "base_directory = 'CK+_Structured_Aligned'\n",
     "os.makedirs(base_directory, exist_ok=True)\n",
     "\n",
     "# Create subdirectories\n",
@@ -146,7 +153,6 @@
     "save_images(testing_set, base_directory, \"test\", \"test\")\n",
     "\n",
     "# Set the base directory containing the train, test, and validation subdirectories.\n",
-    "\n",
     "copy_images_to_label_subdirectories(base_directory)"
    ]
   }
