Cleaned Up Directory + Deliverables

--- a/Datasets/AffectNet.ipynb
+++ b/Datasets/AffectNet.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# AffectNet Dataset\n",
+    "\n",
+    "Download the dataset from the links below and then run the code to foramt it according to the requirements of the models. \n",
+    "\n",
+    "Additionally, run the FaceAlignment.ipynb to align the images such that features are consistent across all images.\n",
+    "\n",
     "**Dataset Link:** https://www.kaggle.com/datasets/thienkhonghoc/affectnet / https://www.kaggle.com/datasets/yakhyokhuja/affectnetaligned"
    ]
   },
@@ -143,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed train: 37553 images. CSV saved to AffectNet_testing\\train\\labels.csv\n",
-      "Processed test: 3200 images. CSV saved to AffectNet_testing\\test\\labels.csv\n",
-      "Processed validation: 800 images. CSV saved to AffectNet_testing\\validation\\labels.csv\n",
+      "Processed train: 37553 images. CSV saved to AffectNet_Test\\train\\labels.csv\n",
+      "Processed test: 3200 images. CSV saved to AffectNet_Test\\test\\labels.csv\n",
+      "Processed validation: 800 images. CSV saved to AffectNet_Test\\validation\\labels.csv\n",
       "Filename labels.csv does not match expected format. Skipping.\n",
       "Filename labels.csv does not match expected format. Skipping.\n",
       "Filename labels.csv does not match expected format. Skipping.\n"
