--- a/Datasets/CK+.ipynb
+++ b/Datasets/CK+.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# CK+ Dataset\n",
+    "\n",
+    "Download the dataset from the link below and then run the code to foramt it according to the requirements of the models. \n",
+    "\n",
+    "Additionally, run the FaceAlignment.ipynb to align the images such that features are consistent across all images.\n",
+    "\n",
     "**Dataset Link:** https://www.kaggle.com/datasets/davilsena/ckdataset"
    ]
   },
