--- a/Datasets/FaceAlignment.ipynb
+++ b/Datasets/FaceAlignment.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Face Alignment\n",
+    "\n",
+    "This notebook when run goes through every image in the specifed directories and using the MTCNN face detector detects and alignes faces."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +21,7 @@
     "from mtcnn import MTCNN\n",
     "from PIL import Image\n",
     "\n",
-    "# Initialize MTCNN detector\n",
+    "# Initialise MTCNN detector\n",
     "detector = MTCNN()\n",
     "\n",
     "def align_face(image_path):\n",
