--- a/Datasets/JAFFE.ipynb
+++ b/Datasets/JAFFE.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# JAFFE Dataset\n",
+    "\n",
+    "Download the dataset from the link below and then run the code to foramt it according to the requirements of the models. \n",
+    "\n",
+    "Additionally, run the FaceAlignment.ipynb to align the images such that features are consistent across all images.\n",
+    "\n",
     "**Dataset Link:** https://zenodo.org/records/14974867"
    ]
   },
@@ -11,7 +17,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NOTE:** The JAFFE dataset comes with a **A_README_FIRST.txt** file or similar. This file contains the image mappings in the strucutre below. This needs to be manually copied and pasted into another file named mapping.csv in the same directory prior to running the code below. \n",
+    "**NOTE:** The JAFFE dataset comes with a **A_README_FIRST.txt** file or similar. This file contains the image mappings in the strucutre below. \n",
+    "This needs to be manually copied and pasted into another file named **mapping.csv** in the same directory prior to running the code below. \n",
     "\n",
     "\n",
     "**Old Format:**\n",
@@ -32,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_22796\\590690424.py:14: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_14848\\819462139.py:15: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(os.path.join(image_dir, mapping_file), delim_whitespace=True)\n"
      ]
     },
