--- a/Datasets/RAF-DB.ipynb
+++ b/Datasets/RAF-DB.ipynb
@@ -4,12 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# RAF-DB Dataset\n",
+    "\n",
+    "Download the dataset from the link below and then run the code to foramt it according to the requirements of the models. \n",
+    "\n",
+    "Additionally, run the FaceAlignment.ipynb to align the images such that features are consistent across all images.\n",
+    "\n",
     "**Dataset Link:** https://www.kaggle.com/datasets/shuvoalok/raf-db-dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,9 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset restructuring complete!\n",
+      "Filename labels.csv does not match expected format. Skipping.\n",
+      "Filename labels.csv does not match expected format. Skipping.\n",
+      "Filename labels.csv does not match expected format. Skipping.\n"
+     ]
+    }
+   ],
    "source": [
     "# Define paths and structure\n",
     "rafdb_root = \"RAF-DB\" \n",
