--- a/Models/ResNet50/ResNET50.ipynb
+++ b/Models/ResNet50/ResNET50.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ResNet50"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +59,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ResNET50 Training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,85 +198,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training the Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using cuda device\n",
-      "Number of classes: 8\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/300: 100%|██████████| 2348/2348 [05:43<00:00,  6.84it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: Train Loss: 1.0018, Train Acc: 0.6287, Val Loss: 1.2070, Val Acc: 0.5637\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/300: 100%|██████████| 2348/2348 [05:46<00:00,  6.78it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2: Train Loss: 0.9105, Train Acc: 0.6655, Val Loss: 1.2423, Val Acc: 0.5600\n",
-      "No improvement in validation accuracy for 1 epochs.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3/300: 100%|██████████| 2348/2348 [05:46<00:00,  6.78it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3: Train Loss: 0.8184, Train Acc: 0.6976, Val Loss: 1.3090, Val Acc: 0.5575\n",
-      "No improvement in validation accuracy for 2 epochs.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4/300: 100%|██████████| 2348/2348 [06:27<00:00,  6.05it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4: Train Loss: 0.7396, Train Acc: 0.7284, Val Loss: 1.3196, Val Acc: 0.5475\n",
-      "No improvement in validation accuracy for 3 epochs.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5/300:  16%|█▌        | 381/2348 [02:02<25:22,  1.29it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Device configuration\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -280,21 +226,23 @@
     "weight_decay = 1e-4\n",
     "patience = 15\n",
     "num_epochs = 300\n",
-    "path = 'ModelsReadyForComparison/ResNet50_AffectNet_Aligned_best_model_LR_0.001_BS_16_M_0.9_WD_0.0001_P_15_E_300.pth'\n",
     "\n",
-    "TrainResNet50(data_directory, dataset_name, device, lr, batch_size, momentum, weight_decay, patience, num_epochs, path)"
+    "# Checkpoint path for resuming training\n",
+    "checkpoint = 'ModelsReadyForComparison/ResNet50_AffectNet_Aligned_best_model_LR_0.001_BS_16_M_0.9_WD_0.0001_P_15_E_300.pth'\n",
+    "\n",
+    "TrainResNet50(data_directory, dataset_name, device, lr, batch_size, momentum, weight_decay, patience, num_epochs, checkpoint)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deriving Metrics On Testing Set "
+    "## ResNET50 Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,6 +364,13 @@
     "    plt.xlabel(\"Predicted Label\")\n",
     "    plt.ylabel(\"True Label\")\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deriving Metrics across all datasets"
    ]
   },
   {
