--- a/Datasets/Fer2013.ipynb
+++ b/Datasets/Fer2013.ipynb
@@ -4,12 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# FER2013 Dataset\n",
+    "\n",
+    "Download the dataset from the link below and then run the code to foramt it according to the requirements of the models. \n",
+    "\n",
+    "Additionally, run the FaceAlignment.ipynb to align the images such that features are consistent across all images.\n",
+    "\n",
     "**Dataset Link:** https://www.kaggle.com/c/challenges-in-representation-learning-facial-expression-recognition-challenge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,13 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Filename labels.csv does not match expected format. Skipping.\n",
+      "Filename labels.csv does not match expected format. Skipping.\n",
       "Filename labels.csv does not match expected format. Skipping.\n"
      ]
     }
@@ -133,7 +141,7 @@
     "df = pd.read_csv('FER/fer2013.csv')\n",
     "\n",
     "# Define base directory structure\n",
-    "base_directory = 'FER__Structured_Aligned'\n",
+    "base_directory = 'FER_Structured_Aligned'\n",
     "os.makedirs(base_directory, exist_ok=True)\n",
     "\n",
     "# Create subdirectories\n",
